--- a/conin/mediation_variables/ICML_aptEM.ipynb
+++ b/conin/mediation_variables/ICML_aptEM.ipynb
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "B = 200\n",
+    "B = 100\n",
     "seq_list = []\n",
     "for b in range(B):\n",
     "    apt_truth, combined_emits = ahlp.combined_simulation(apt_hmm, user_list, cst_list)\n",
@@ -167,47 +167,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "7314388e-146c-4a28-81dc-dcf0a7bb9289",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Step:0, neg log prob: 48852.574031829834, log_prob_change %: 0.01495574119487667\n",
-      "Step:1, neg log prob: 48230.79042816162, log_prob_change %: 0.012727755210259557\n",
-      "Step:2, neg log prob: 47985.46336364746, log_prob_change %: 0.005086523822983324\n",
-      "Step:3, neg log prob: 47878.47758483887, log_prob_change %: 0.002229545602130069\n",
-      "Step:4, neg log prob: 47813.08706665039, log_prob_change %: 0.0013657601805029623\n",
-      "Step:5, neg log prob: 47765.57831573486, log_prob_change %: 0.0009936348776079067\n",
-      "Step:6, neg log prob: 47729.153717041016, log_prob_change %: 0.0007625700342844739\n",
-      "Step:7, neg log prob: 47700.54308319092, log_prob_change %: 0.0005994372751654852\n",
-      "Step:8, neg log prob: 47677.3477935791, log_prob_change %: 0.0004862688789803347\n",
-      "Step:9, neg log prob: 47657.80044555664, log_prob_change %: 0.00040999235333080876\n",
-      "Step:10, neg log prob: 47640.74508666992, log_prob_change %: 0.00035787129761060766\n",
-      "Step:11, neg log prob: 47625.50128173828, log_prob_change %: 0.0003199741083794658\n",
-      "Step:12, neg log prob: 47611.69518280029, log_prob_change %: 0.0002898887899639211\n",
-      "Step:13, neg log prob: 47599.13799285889, log_prob_change %: 0.0002637417107959334\n",
-      "Step:14, neg log prob: 47587.71859741211, log_prob_change %: 0.00023990761026997066\n",
-      "Step:15, neg log prob: 47577.37099456787, log_prob_change %: 0.00021744271734852613\n",
-      "Step:16, neg log prob: 47568.01625061035, log_prob_change %: 0.00019662170821896835\n",
-      "Step:17, neg log prob: 47559.57256317139, log_prob_change %: 0.00017750766385715112\n",
-      "Step:18, neg log prob: 47551.93627166748, log_prob_change %: 0.0001605626605193578\n",
-      "Step:19, neg log prob: 47544.99108123779, log_prob_change %: 0.0001460548397021974\n",
-      "Step:20, neg log prob: 47538.6257019043, log_prob_change %: 0.00013388117630771834\n",
-      "Step:21, neg log prob: 47532.731048583984, log_prob_change %: 0.00012399713355778336\n",
-      "Step:22, neg log prob: 47527.21068572998, log_prob_change %: 0.00011613813749438157\n",
-      "Step:23, neg log prob: 47521.9875793457, log_prob_change %: 0.00010989717908788572\n",
-      "Step:24, neg log prob: 47517.002868652344, log_prob_change %: 0.00010489272329017359\n",
-      "Step:25, neg log prob: 47512.214851379395, log_prob_change %: 0.00010076429454493106\n",
-      "Step:26, neg log prob: 47507.58933258057, log_prob_change %: 9.735430800894004e-05\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_apt, new_params, time_list = em.apt_EM_v2(apt_hmm, cst_list, seq_list,  device ='cuda:0', conv = 1e-4, max_step = 100, \\\n",
-    "                                        dtype = torch.float32, rand_init = True, mix_param = .81, timer = True, fix_mu = None)"
+    "                                        dtype = torch.float32, rand_init = True, mix_param = .81, timer = True, fix_mu = .8)"
    ]
   },
   {
@@ -232,6 +198,133 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bef84487-97f3-427e-b8d2-b5539eb49ca5",
+   "metadata": {},
+   "source": [
+    "# EM on Single Sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b682965e-6c5f-4f9f-95f3-92f905dd8082",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'apt_EM' from '/home/fyqiu/Projects/conin/conin/mediation_variables/apt_EM.py'>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importlib.reload(em)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "89ac03a7-4eaf-4384-8a64-f65804939265",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "101.92"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "611.52/6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "a0f61350-9ed2-4b63-be96-9c7434e8f6f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "70\n",
+      "80\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "B = 100\n",
+    "mini_B = 50\n",
+    "time_list = []\n",
+    "steps_list = []\n",
+    "l1_list=  []\n",
+    "l2_list = []\n",
+    "for b in range(B):\n",
+    "    if b % 10 == 0:\n",
+    "        print(b)\n",
+    "    apt_truth, combined_emits = ahlp.combined_simulation(apt_hmm, user_list, cst_list)\n",
+    "    seq_list= [combined_emits]\n",
+    "    new_apt, new_params, time_list = em.apt_EM_v2(apt_hmm, cst_list, seq_list,  device ='cuda:0', conv = 1e-4, max_step = 100, \\\n",
+    "                                            dtype = torch.float32, rand_init = True, mix_param = .81, timer = True, fix_mu = .8)\n",
+    "    err = new_params[0] - true_hmm_params[0]\n",
+    "    err = err.cpu()\n",
+    "    l1_list.append(torch.norm(err, p = 1).item())\n",
+    "    l2_list.append(torch.norm(err).item())\n",
+    "    steps_list.append(len(time_list)) #records times for each mini time\n",
+    "    time_list.append(sum(time_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "fd400f36-0e52-4900-893f-e26208a8d1dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average steps: 20.18 with sd 16.922990279498478\n",
+      "average time: 0.39525714874267576  with sd 0.9279965679526323\n",
+      "average TV: 2.611830278635025 with sd 0.8014396673083259 \n",
+      "average L2: 1.1183691078424454 with sd 0.24501647888186712\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'average steps: {np.array(steps_list).mean()} with sd {np.array(steps_list).std()}\\\n",
+    "\\naverage time: {np.array(time_list).mean()}  with sd {np.array(time_list).std()}\\\n",
+    "\\naverage TV: {.5*np.array(l1_list).mean()} with sd {np.array(l1_list).std()} \\\n",
+    "\\naverage L2: {np.array(l2_list).mean()} with sd {np.array(l2_list).std()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eafc9541-1a99-439f-9148-ca74ab086a86",
+   "metadata": {},
+   "source": [
+    "# Batch Learning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "2a6ef0be-cadd-409d-ba03-4fe546cc6c28",
@@ -249,7 +342,19 @@
     }
    ],
    "source": [
-    "new_params[3]"
+    "B = 100\n",
+    "mini_B = 50\n",
+    "time_list = []\n",
+    "steps_list = []\n",
+    "for b in range(B):\n",
+    "    seq_list = []\n",
+    "    for minib in range(mini_B):\n",
+    "        apt_truth, combined_emits = ahlp.combined_simulation(apt_hmm, user_list, cst_list)\n",
+    "        seq_list.append(combined_emits)\n",
+    "    new_apt, new_params, time_list = em.apt_EM_v2(apt_hmm, cst_list, seq_list,  device ='cuda:0', conv = 1e-4, max_step = 100, \\\n",
+    "                                            dtype = torch.float32, rand_init = True, mix_param = .81, timer = True, fix_mu = None)weight_list = em.em_emitweights(apt_hmm,seq_list, mix_param = .81)\n",
+    "    steps_list.append(len(time_list)) #records times for each mini time\n",
+    "    time_list.append(sum(time_list))"
    ]
   },
   {
@@ -669,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "f4062a39-2396-4ba9-9738-69da5135e01f",
    "metadata": {},
    "outputs": [],
@@ -693,6 +798,84 @@
     "\n",
     "# cst_list = cst_list\n",
     "dummy_sat = len(dummy_cst_list) * (True,)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0689a898-3e46-4dcc-9278-de39c8f75688",
+   "metadata": {},
+   "source": [
+    "# EM on Single Sequences: Unconstrained"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "cc07fad1-85e7-4612-b702-cebdaed65ef1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "70\n",
+      "80\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "B = 100\n",
+    "mini_B = 50\n",
+    "time_list = []\n",
+    "steps_list = []\n",
+    "l1_list=  []\n",
+    "l2_list = []\n",
+    "for b in range(B):\n",
+    "    if b % 10 == 0:\n",
+    "        print(b)\n",
+    "    apt_truth, combined_emits = ahlp.combined_simulation(apt_hmm, user_list, cst_list)\n",
+    "    seq_list= [combined_emits]\n",
+    "    weight_list = em.em_emitweights(apt_hmm,seq_list, mix_param = .81)\n",
+    "    unc_new_apt, unc_new_params, unc_time_list = em.apt_EM_v2(apt_hmm, dummy_cst_list, seq_list,  device ='cuda:0', conv = 1e-4, max_step = 100, \\\n",
+    "                                        dtype = torch.float32, rand_init = True, mix_param = .81, timer = True, fix_mu = .8)    \n",
+    "    err = unc_new_params[0] - true_hmm_params[0]\n",
+    "    err = err.cpu()\n",
+    "    l1_list.append(torch.norm(err, p = 1).item())\n",
+    "    l2_list.append(torch.norm(err).item())\n",
+    "    steps_list.append(len(unc_time_list)) #records times for each mini time\n",
+    "    time_list.append(sum(unc_time_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "1dcacc09-31c2-4ac0-9d35-3d4a33b74fc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average steps: 29.11 with sd 24.453177707610926\n",
+      "average time: 4.968341801166535  with sd 5.725432569105226\n",
+      "average TV: 2.5803708922863007 with sd 0.7639641810111815 \n",
+      "average L2: 1.0808264112472534 with sd 0.24395002148491987\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'average steps: {np.array(steps_list).mean()} with sd {np.array(steps_list).std()}\\\n",
+    "\\naverage time: {np.array(time_list).mean()}  with sd {np.array(time_list).std()}\\\n",
+    "\\naverage TV: {.5*np.array(l1_list).mean()} with sd {np.array(l1_list).std()} \\\n",
+    "\\naverage L2: {np.array(l2_list).mean()} with sd {np.array(l2_list).std()}')"
    ]
   },
   {
