added ICML26 folder of submitted code

--- a/conin/mediation_variables/ICML_aptEM.ipynb
+++ b/conin/mediation_variables/ICML_aptEM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "76353080-0eb8-4b9b-b16c-347a06ff395f",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0ed4a88c-be72-4726-b946-86ba0137c5dd",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5e3bb608-ba8c-451b-ae2c-891b6f421746",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "dcbf414e-7726-428c-ae26-cf9c9ebd408f",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4f68669c-e8af-412e-a0f6-e5084e160052",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b6fc8b04-0417-4b9e-a66a-310a4f0ca614",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "<module 'apt_EM' from '/home/fyqiu/Projects/conin/conin/mediation_variables/apt_EM.py'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "48b83980-0473-41e8-b0d1-4e7b30b8161a",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ffc59ac7-82e3-4f45-bdb4-bdcb1bc3d8c1",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "63dc4bfc-a7a7-4a61-8adb-776803f72d38",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "7314388e-146c-4a28-81dc-dcf0a7bb9289",
    "metadata": {},
    "outputs": [],
@@ -178,21 +178,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "dadb6708-e044-485c-b34f-0461419a82b4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30.259130895137787"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sum(time_list)/len(time_list)"
    ]
@@ -207,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "b682965e-6c5f-4f9f-95f3-92f905dd8082",
    "metadata": {},
    "outputs": [
@@ -217,7 +206,7 @@
        "<module 'apt_EM' from '/home/fyqiu/Projects/conin/conin/mediation_variables/apt_EM.py'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,28 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "89ac03a7-4eaf-4384-8a64-f65804939265",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "101.92"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "611.52/6"
+    "L = 6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "id": "a0f61350-9ed2-4b63-be96-9c7434e8f6f2",
    "metadata": {},
    "outputs": [
@@ -284,7 +262,7 @@
     "    seq_list= [combined_emits]\n",
     "    new_apt, new_params, time_list = em.apt_EM_v2(apt_hmm, cst_list, seq_list,  device ='cuda:0', conv = 1e-4, max_step = 100, \\\n",
     "                                            dtype = torch.float32, rand_init = True, mix_param = .81, timer = True, fix_mu = .8)\n",
-    "    err = new_params[0] - true_hmm_params[0]\n",
+    "    err = new_params[0][2:(2+L),2:(2+L)] - true_hmm_params[0][2:(2+L),2:(2+L)]\n",
     "    err = err.cpu()\n",
     "    l1_list.append(torch.norm(err, p = 1).item())\n",
     "    l2_list.append(torch.norm(err).item())\n",
@@ -294,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "fd400f36-0e52-4900-893f-e26208a8d1dd",
    "metadata": {},
    "outputs": [
@@ -302,10 +280,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average steps: 20.18 with sd 16.922990279498478\n",
-      "average time: 0.39525714874267576  with sd 0.9279965679526323\n",
-      "average TV: 2.611830278635025 with sd 0.8014396673083259 \n",
-      "average L2: 1.1183691078424454 with sd 0.24501647888186712\n"
+      "average steps: 22.0 with sd 18.095303258028036\n",
+      "average time: 0.1972188115119934  with sd 0.6000255651790911\n",
+      "average TV: 0.8078932479023934 with sd 0.31863595932013217 \n",
+      "average L2: 0.4530615732073784 with sd 0.0773997225205208\n"
      ]
     }
    ],
@@ -810,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "id": "cc07fad1-85e7-4612-b702-cebdaed65ef1",
    "metadata": {},
    "outputs": [
@@ -818,16 +796,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "10\n",
-      "20\n",
-      "30\n",
-      "40\n",
-      "50\n",
-      "60\n",
-      "70\n",
-      "80\n",
-      "90\n"
+      "0\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'dummy_cst_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     11\u001b[39m seq_list= [combined_emits]\n\u001b[32m     12\u001b[39m weight_list = em.em_emitweights(apt_hmm,seq_list, mix_param = \u001b[32m.81\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m unc_new_apt, unc_new_params, unc_time_list = em.apt_EM_v2(apt_hmm, \u001b[43mdummy_cst_list\u001b[49m, seq_list,  device =\u001b[33m'\u001b[39m\u001b[33mcuda:0\u001b[39m\u001b[33m'\u001b[39m, conv = \u001b[32m1e-4\u001b[39m, max_step = \u001b[32m100\u001b[39m, \\\n\u001b[32m     14\u001b[39m                                     dtype = torch.float32, rand_init = \u001b[38;5;28;01mTrue\u001b[39;00m, mix_param = \u001b[32m.81\u001b[39m, timer = \u001b[38;5;28;01mTrue\u001b[39;00m, fix_mu = \u001b[32m.8\u001b[39m)    \n\u001b[32m     15\u001b[39m err = unc_new_params[\u001b[32m0\u001b[39m][\u001b[32m2\u001b[39m:(\u001b[32m2\u001b[39m+L),\u001b[32m2\u001b[39m:(\u001b[32m2\u001b[39m+L)] - true_hmm_params[\u001b[32m0\u001b[39m][\u001b[32m2\u001b[39m:(\u001b[32m2\u001b[39m+L),\u001b[32m2\u001b[39m:(\u001b[32m2\u001b[39m+L)]\n\u001b[32m     16\u001b[39m err = err.cpu()\n",
+      "\u001b[31mNameError\u001b[39m: name 'dummy_cst_list' is not defined"
      ]
     }
    ],
@@ -846,7 +826,7 @@
     "    weight_list = em.em_emitweights(apt_hmm,seq_list, mix_param = .81)\n",
     "    unc_new_apt, unc_new_params, unc_time_list = em.apt_EM_v2(apt_hmm, dummy_cst_list, seq_list,  device ='cuda:0', conv = 1e-4, max_step = 100, \\\n",
     "                                        dtype = torch.float32, rand_init = True, mix_param = .81, timer = True, fix_mu = .8)    \n",
-    "    err = unc_new_params[0] - true_hmm_params[0]\n",
+    "    err = unc_new_params[0][2:(2+L),2:(2+L)] - true_hmm_params[0][2:(2+L),2:(2+L)]\n",
     "    err = err.cpu()\n",
     "    l1_list.append(torch.norm(err, p = 1).item())\n",
     "    l2_list.append(torch.norm(err).item())\n",
